<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIOP</string>
    <string name="image_siop">SIOP Logo</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_activity_values">ValuesActivity</string>
    <string name="title_activity_classifier">ClassifierActivity</string>
    <string name="title_activity_classifier_list">ClassifierListActivity</string>
    <string name="title_activity_shortcut">ShortCutActivity</string>

    <!-- Titles -->
    <string name="siopTitle">SIOP - Sistema Integrado de Orçamento e Planejamento</string>
    <string name="explanationHome">Consulte o Orçamento Federal por Classificações Orçamentárias ou por Programa de trabalho</string>
    <string name="explanationPT">Escolha o Exercício financeiro e os códigos da Unidade orçamentária e Programa de trabalho para consultar</string>
    <string name="explanationClassifier">Escolha o Exerício financeiro e o Classificador Orçamentário para consultar</string>

    <!-- Buttons -->
    <string name="buttonPT">Programa de Trabalho</string>
    <string name="buttonClassifier">Classificações Orçamentárias</string>
    <string name="buttonQuery">Consultar</string>
    <string name="buttonBack">Voltar</string>

    <!-- QueryActivity -->
    <string name="exericioLabel">Exercício</string>
    <string name="unidadeLabel">Unidade orçamentária</string>
    <string name="unidadeHint">00000</string>
    <string name="ptLabel">Programa de trabalho</string>
    <string name="ptHint">00.000.0000.XXXX.XXXX</string>
    <string name="dialogGetQueryName">Nova Consulta</string>
    <string name="dialogPositive">Salvar</string>
    <string name="dialogNegative">Cancelar</string>
    <string name="messageGetQueryName">Digite um nome para a consulta.</string>
    <string name="dialogShowList">Minhas Consultas</string>
    <string name="context_menu_title">Minha Consulta</string>
    <string name="context_menu_exec">Executar</string>
    <string name="context_menu_delete">Remover</string>
    <string name="menu_query_save_action">Salvar Consulta</string>
    <string name="menu_query_show_action">Listar Consultas Salvas</string>
    

    <!-- ClassifierActivity -->
    <string name="classifiersLabel">Classificações Orçamentárias</string>
    <string name="radioFuncao">Função</string>
    <string name="radioPrograma">Programa</string>
    <string name="radioGND">Grupo de Natureza da Despesa</string>

    <!-- ClassifierListActivity -->
    <string name="classifierLabel">Classificador - ANO</string>
    
    <!-- ValuesActivity -->
    <string name="valuesTitle">Orçamento Federal - </string>
    <string name="type">Identificador</string>
    <string name="codigo">Código:</string>
    <string name="label">Descrição do Classificador</string>
    <string name="ploa">Valor Projeto Lei</string>
    <string name="loa">Valor Dotação Inicial</string>
    <string name="leiMaisCredito">Valor Lei Mais Crédito</string>
    <string name="empenhado">Valor Empenhado</string>
    <string name="liquidado">Valor Liquidado</string>
    <string name="pago">Valor Pago</string>
    <string name="defaultValue">R$ 10.000,00</string>
    <string name="dialog_shortcut_title">Atalho para Consulta</string>
    <string name="dialog_shortcut_message">Digite um nome para este atalho.</string>
    <string name="dialog_shortcut_positive">Criar</string>
    <string name="dialog_shortcut_negative">Cancelar</string>
    <string name="menu_classifier_title">Descrição</string>
    <string name="menu_classifier_action">Ver detalhes</string>
    <string name="menu_classifier_shortcut">Criar atalho</string>

    <!-- Error -->
    <string name="titleError">Erro!</string>
    <string name="internetAccessError">Verifique sua conexão com a internet!</string>
    <string name="invalidExercicioError">Exercício inválido.</string>
    <string name="invalidPtError">Cód. do Programa de trabalho inválido.</string>
    <string name="invalidUnidadeError">Cód. da Unidade orçamentária inváido.</string>
    <string name="invalidItem">Resultado não encontrado.</string>
    <string name="invalidClassifier">Erro com servidor! Tente novamente mais tarde.</string>
    <string name="invalidName">O nome deve ter apenas letras e números, entre 3 e 20 caracteres.</string>
    <string name="invalidSaveQueryName">Já existe uma consulta com este nome.</string>
    <string name="emptyQueryList">Não existem consultas salvas.</string>
    <string name="loading">Carregando&#8230;</string>

    <!-- Adapter PT - Classifier -->
    <string name="item_classifier_type">Classificador</string>
    <string name="item_classifier_cod">Código</string>
    <string name="item_classifier_label">Descrição</string>
    
    <!-- Adapter Query  -->
    <string name="item_query_name">Nome da Consulta</string>
    <string name="item_query_year">Exercício: </string>
    <string name="item_query_uo">Unidade Orçamentária: </string>
    <string name="item_query_pt">Programa de Trabalho</string>
    

</resources>
