<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ValuesActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textViewValuesTitle"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/textViewPloa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ploa" />
        
        <EditText
	        android:id="@+id/editTextPloa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewLoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loa" />
        
        <EditText
	        android:id="@+id/editTextLoa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewLeiMaisCredito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leiMaisCredito" />
        
        <EditText
	        android:id="@+id/editTextLeiMaisCredito"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewEmpenhado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empenhado" />
        
        <EditText
	        android:id="@+id/editTextEmpenhado"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewLiquidado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liquidado" />
        
        <EditText
	        android:id="@+id/editTextLiquidado"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>
        
        <TextView
            android:id="@+id/textViewPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago" />
        
        <EditText
	        android:id="@+id/editTextPago"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:ems="10"
	        android:editable="false" >
        </EditText>

        <Button
            android:id="@+id/buttonback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buttonBack"
            android:onClick="back" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textViewValuesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/valuesTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>