<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClassifierActivity" >

    <TextView
        android:id="@+id/textViewClassifierTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/siopTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewClassifierExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewClassifierTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/explanationClassifier"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewClassifierExercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewClassifierExplanation"
        android:layout_below="@+id/textViewClassifierExplanation"
        android:layout_marginTop="60dp"
        android:text="@string/exericioLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerClassifierExercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewClassifierExercicio"
        android:layout_below="@+id/textViewClassifierExercicio"
        android:layout_marginTop="15dp"
        android:entries="@array/exercicios" />

    <TextView
        android:id="@+id/textViewClassifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewClassifierExercicio"
        android:layout_below="@+id/spinnerClassifierExercicio"
        android:layout_marginTop="20dp"
        android:text="@string/classifiersLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupClassifiers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewClassifierExercicio"
        android:layout_below="@+id/textViewClassifier"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButtonFuncao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioFuncao"
            android:checked="true" />
        
        <RadioButton
            android:id="@+id/radioButtonPrograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioPrograma" />
        
        <RadioButton
            android:id="@+id/radioButtonGND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioGND" />
    </RadioGroup>
    
    <Button
            android:id="@+id/buttonClassifierQuery"
            style="@style/btnStyleShakespeare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/radioGroupClassifiers"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="query"
            android:text="@string/buttonQuery" />

</RelativeLayout>

</ScrollView>