<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayoutQueryId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewQueryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_query_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQueryYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/item_query_year" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutQueryId"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewQueryUO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_query_uo" />

        <TextView
            android:id="@+id/textViewQueryPT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_query_pt" />
    </LinearLayout>

</RelativeLayout>