<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <RelativeLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".QueryActivity" >

        <TextView
            android:id="@+id/textViewQueryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/siopTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewQueryExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewQueryTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/explanationPT"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewQueryExercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExplanation"
            android:layout_below="@+id/textViewQueryExplanation"
            android:layout_marginTop="60dp"
            android:text="@string/exericioLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerQueryExercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExercicio"
            android:layout_below="@+id/textViewQueryExercicio"
            android:layout_marginTop="15dp"
            android:entries="@array/exercicios" />

        <TextView
            android:id="@+id/textViewUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExercicio"
            android:layout_below="@+id/spinnerQueryExercicio"
            android:layout_marginTop="20dp"
            android:text="@string/unidadeLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUnidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExercicio"
            android:layout_below="@+id/textViewUnidade"
            android:layout_marginTop="15dp"
            android:ems="4"
            android:hint="@string/unidadeHint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textViewPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExercicio"
            android:layout_below="@+id/editTextUnidade"
            android:layout_marginTop="20dp"
            android:text="@string/ptLabel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewQueryExercicio"
            android:layout_below="@+id/textViewPt"
            android:layout_marginTop="15dp"
            android:ems="9"
            android:hint="@string/ptHint" />

        <Button
            android:id="@+id/buttonQuery"
            style="@style/btnStyleShakespeare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/editTextPt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="query"
            android:text="@string/buttonQuery" />
    </RelativeLayout>
</ScrollView>